
In this CVS branch, fixes in the SWIG core and improvements to the
language modules take place.  This branch is also the basis for the
"swig1.3" Debian package (currently unofficial, available from
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian).  Eventually it
will be merged with the development on the trunk of the CVS tree.

6/05/2001: cheetah (william fulton)
	   [Java] destructor (_delete()) was not aware of %name renaming
	   [Java] extends baseclass did not know about %name renaming
	   [Java] extends baseclass did extend even when the baseclass was not known to swig
	   [Java] sometimes enum-declarations occured before the Java class declaration
	   [Java] unrelated enum initialisations appearing in Java class
	   [Java] if module ends in '_' correct JNI names are now produced

6/04/2001: cheetah (william fulton)
	   [Java] Shadow class mods - Modified constructor replaces
	   newInstance(). _delete() now thread safe. getCPtr() replaces
	   _self. _selfClass() removed as now redundant. 
          *** POTENTIAL INCOMPATIBILITY FOR JAVA MODULE ***

	   [Java] Not all output java files had SWIG banner. New banner.

	   [Java] Shadow class finalizers are output by default: Command
	   line option -finalize deprecated and replaced with -nofinalize.
          *** POTENTIAL INCOMPATIBILITY FOR JAVA MODULE ***

6/ 1/2001: mkoeppe
	   [Guile] Cast SCM_CAR() to scm_bits_t before shifting it.
	   This is required for compiling with a Guile configured with
	   strict C type checking.  

6/ 1/2001: mkoeppe
	   Added configure option "--with-swiglibdir".

5/31/2001: mkoeppe
	   [Guile] Support multiple parallel lists or vectors in
	   the typemaps provided by list-vector.i.  New typemaps file,
	   pointer-in-out.i. 

5/25/2001: cheetah (william fulton)
	   [Java] HTML update for examples.

5/28/2001: mkoeppe
	   Minor changes to the build system.  Added subdirectory for
	   Debian package control files.

5/28/2001: mkoeppe