@@ -19,6 +19,7 @@ be used to wrap a C function, a global variable, and a constant.
 <li><a href="constants/index.html">constants</a>.  This shows how preprocessor macros and
 certain C declarations are turned into constants.
 <li><a href="enum/index.html">enum</a>. Wrapping enumerations.
+<li><a href="class/index.html">class</a>. How to wrap a simple C++ class.
 </ul>
 
 <h2>Compilation Issues</h2>
